# LumiEngine

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
assets/: cvars.json
shaders/: CMakeLists.txt  meshtriangle.frag  meshtriangle.vert  pbr.frag  pbr.vert  redtriangle.frag  redtriangle.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  unlit.frag  unlit.vert
shaders/shadow/: directional.frag  directional.vert
src/: CMakeLists.txt  main.cpp
src/app/: engine.cpp  engine.h  user_input.cpp  user_input.h  window.cpp  window.h
src/core/: ISingleton.h  hash.h  json.h  log.h  math.h  meta.h  scope_guard.h  singleton.h
src/function/cvar/: cvar_system.cpp  cvar_system.h
src/function/cvars/: cvar_system.cpp  cvar_system.h  cvar_system_imgui.cpp  cvar_system_json.cpp  cvar_system_private.h
src/function/render/: render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_system.cpp  render_system.h  rhi.cpp  rhi.h  rhi_imgui.cpp  vulkan_types.h  vulkan_utils.h
src/function/render/material/: material.h  pbr_material.cpp  pbr_material.h  skybox_material.cpp  skybox_material.h  unlit_material.cpp  unlit_material.h
src/function/render/pipeline/: forward_pipeline.h  render_pipeline.h
src/function/render/pipeline/pass/: present_pass.cpp  present_pass.h  render_pass.h  shadow_pass.cpp  shadow_pass.h
src/function/render/pipeline/subpass/: directional_shadow_subpass.cpp  directional_shadow_subpass.h  imgui_subpass.cpp  imgui_subpass.h  mesh_lighting_subpass.cpp  mesh_lighting_subpass.h  render_subpass.cpp  render_subpass.h  skybox_subpass.cpp  skybox_subpass.h
src/function/render/rhi/: vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_imgui.cpp  vulkan_types.h  vulkan_utils.h
src/render/: rhi.cpp  rhi.h  vulkan_utils.h
